[package]
name = "pg_keyset"
version = "0.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_keyset"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "0.16.1"
sqlparser = "0.60.0"
regex = "1.10.0"
lazy_static = "1.4.0"
libc = "0.2.178"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
